--- a/template/menu.html
+++ b/template/menu.html
@@ -10,7 +10,7 @@
         <ion-nav-view name="side-menu21" ></ion-nav-view>
     </ion-side-menu-content>
     <ion-side-menu side="left" id="side-menu21" expose-aside-when="large" >
-        <ion-header-bar class="dark-bg expanded" style="background: url('img/profile-bg.jpg'); background-size: cover;">
+        <ion-header-bar class="dark-bg expanded" style="background: url('img/icon-512.png'); background-size: cover;">
         </ion-header-bar>
         <ion-content style="background-color:snow;" class="stable-bg has-expanded-header" padding="false" class="side-menu-left has-header">
             <ion-list id="menu-list3" class=" " style="background-color:snow;" >
